major changes for Event invite card
